--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -66,6 +66,12 @@
   position: relative;
 }
 
+.sitting_image {
+  position: fixed;
+  top:400px;
+  left:320px;
+}
+
 .main1 {
   background-image: url("/images/man.png");
   background-size: cover;
@@ -111,44 +117,13 @@
   background-repeat: no-repeat;
   background-position: center center;
   width: 100%;
-  height: 850px;
+  height: 900px;
   display: flex;
 }
-
-/* .top_title_frame {
-  width: 580px;
-  min-height: 580px;
-  background: rgba(138, 136, 136, 0.7);
-  transform: rotate(0.2deg);
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.top_title {
-  min-width: 550px;
-  min-height: 550px;
-  font-family: "Hiragino Mincho Pro";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 46px;
-  line-height: 115px;
-
-  display: flex;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  color: #c9e265;
-  background: rgba(0, 0, 0, 0.5);
-  flex-direction: column;
-  padding-right: 20px;
-  padding-left: 20px;
-} */
 
 .menu_bar {
   position: absolute;
-  top: 550px;
+  top: 630px;
   max-width: 100%;
   height: auto;
   display: flex;
@@ -1358,7 +1333,6 @@
   justify-content: center;
   //lign-items: center;
   flex-direction: column;
-  
 }
 .recruit_title h1 {
   font-size: 50px;
@@ -1379,7 +1353,7 @@
   align-items: center;
 
   border: 5px solid #c9e265;
-  border-image:linear-gradient(to right, #c9e265 -10%, #4f9dff 120%);
+  border-image: linear-gradient(to right, #c9e265 -10%, #4f9dff 120%);
   border-image-slice: 1;
   border-radius: 2px;
 
@@ -1439,24 +1413,24 @@
 
 .recruit_title_mid {
   width: 100%;
-    height: 45px;
-    background-image: linear-gradient(to right, #c9e265 -10%, #4f9dff 120%);
-    color: #ffffff;
+  height: 45px;
+  background-image: linear-gradient(to right, #c9e265 -10%, #4f9dff 120%);
+  color: #ffffff;
 
-    margin-top: 40px;
-    margin-bottom: 10px;
+  margin-top: 40px;
+  margin-bottom: 10px;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .recruit_mid_items {
   width: 100%;
   height: 270px;
-  border:5px solid #FFF;
+  border: 5px solid #fff;
   border-image: linear-gradient(to right, #c9e265 -10%, #4f9dff 120%);
-  border-image-slice:1;
+  border-image-slice: 1;
   border-radius: 2px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -1574,8 +1548,8 @@
   border: 0px none;
   border-radius: 10px;
   font-size: 15px;
-  font-weight:600;
-  color:#FFF;
+  font-weight: 600;
+  color: #fff;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
@@ -1717,9 +1691,9 @@
   align-items: center;
 
   border: 5px solid #c9e265;
-  border-image:linear-gradient(to right, #c9e265 -10%, #4f9dff 120%);
+  border-image: linear-gradient(to right, #c9e265 -10%, #4f9dff 120%);
   border-image-slice: 1;
-  border-radius:10px;
+  border-radius: 10px;
   margin-bottom: 50px;
 }
 
@@ -1731,7 +1705,6 @@
   align-self: flex-start;
   padding-left: 5px;
 }
-
 
 .inquiry_textarea {
   width: 100%;
@@ -1771,15 +1744,15 @@
   align-items: center;
 }
 
-.oubo_top_title{
-  padding-top:30px;
-  padding-bottom:20px;
+.oubo_top_title {
+  padding-top: 30px;
+  padding-bottom: 20px;
 }
 
 .oubo_top_bar {
   width: 100%;
   height: 60px;
-  background-image:  linear-gradient(to right, #c9e265 -10%, #4f9dff 120%);;
+  background-image: linear-gradient(to right, #c9e265 -10%, #4f9dff 120%);
 
   color: #ffffff;
   font-weight: 700;
@@ -1796,10 +1769,10 @@
   padding: 30px;
   background: rgb(255, 255, 255, 0.3);
   border-radius: 10px;
-    display: flex;
+  display: flex;
   justify-content: center;
-  flex-direction:column;
-  align-items:center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .oubo_form h4 {
@@ -1874,14 +1847,14 @@
   border: 0px none;
   border-radius: 25px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-  color:#FFF;
+  color: #fff;
 }
-.thanks_wrapper{
-  width:100%;
-  min-height:800px;
-  background:#FFF;
-  display:flex;
-  align-items:center;
+.thanks_wrapper {
+  width: 100%;
+  min-height: 800px;
+  background: #fff;
+  display: flex;
+  align-items: center;
 }
 .thanks {
   width: 100%;
