📝 🎨 求人情報追加、求人情報がないときのメッセージ表示のUI修正。

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1463,6 +1463,15 @@
   align-self: flex-end;
 }
 
+.search_message_wrapper{
+  margin-top:50px;
+  width:70%;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+}
+
 .content_recruit_detail {
   width: 100%;
   height: auto;
@@ -1503,6 +1512,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background:#FFF;
   padding: 10px;
 }
 .detail_content p {
