--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -1108,6 +1108,15 @@
     align-self: flex-end;
   }
 
+  .search_message_wrapper{
+    margin-top:50px;
+    width:70%;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+  }
+
   /*応募詳細*/
   .content_recruit_detail {
     width: 100%;
@@ -1146,6 +1155,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background:#FFF;
     padding: 10px;
   }
   .detail_content p {
