--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -255,7 +255,7 @@
     justify-content: center;
     align-items: center;
     padding-top: 20px;
-    padding-left: -60px;
+    padding-left: 0px;
   }
 
   .people_title h1 {
@@ -498,7 +498,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items:center;
     padding-top: 10px;
+    padding-left: 0px;
     margin-top: 20px;
     margin-bottom: 30px;
   }
@@ -899,20 +901,21 @@
   .twitter_title {
     height: auto;
     width: 95%;
-    font-size: 21px;
+    font-size: 17px;
 
     display: flex;
     align-items: center;
     //margin-left: -30px;
     margin-top: 20px;
     margin-bottom: 30px;
-    margin-left: -60px;
+    padding-left: 0px;
   }
 
   .twitter_title h1 {
     background-image: linear-gradient(to right, #0cc0df, #ffde59);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    padding-bottom:20px;
   }
 
   .twitter_content {
