--- a/src/styles/mobile.module.css
+++ b/src/styles/mobile.module.css
@@ -152,6 +152,7 @@
     border: none 0px;
     font-size: 25px;
     font-family: "Zen Maru Gothic";
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
     background: #fff;
   }
 
@@ -1769,8 +1770,8 @@
 
   .download_button {
     height: 55px;
-    background: rgba(0, 0, 0, 0.1);
-
+    background: linear-gradient(to right, #0cc0df -20%, #ffde59 150%);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
     border: 0px none;
     border-radius: 10px;
     margin-top: 20px;
