🎨 ダークモード対応（お問い合わせ）

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3577,7 +3577,7 @@
   .content_contact {
     width: 100%;
     height: auto;
-    background: #ffffff;
+    background: black;
     //border: 18px solid #C9E265;
     border-radius: 2px;
     //font-family: "Zen Maru Gothic", sans-serif;
