--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -944,7 +944,7 @@
 /*会社概要*/
 .content_gaiyou {
   width: 100%;
-  height: 750px;
+  height: 100vh;
   background: #ffffff;
   //border: 18px solid rgb(0,0,0,0.1);
   border-radius: 2px;
